added html example and some css

--- a/web/index.html
+++ b/web/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
+<!--Copyright © James Greenwell, Sean Webber
+    Elon University
+    September 12th, 2016
 -->
 <html>
     <head>
@@ -12,6 +11,65 @@ and open the template in the editor.
         <title>Reactive Resume</title>
     </head>
     <body>
-        <div>TODO write content</div>
+      <header>
+        <h1>Sarah Smith</h1>
+        <p>Campus Box 1111 &#9679; Elon, NC 27244 &#9679; &lpar;336&rpar; 555&dash;5555 &#9679; ssmith25&#64;elon.edu</p>
+      </header>
+      <main>
+        <h2>EDUCATION</h2>
+        <h3><b>Elon University</b>, Elon, NC<span>May 2017</span></h3>
+        <p><i>Bachelor of Science in Computer Science</i><br>GPA&colon; 3.66, 4 years on Dean’s List</p>
+        <h2>TECHNICAL QUALIFICATIONS</h2>
+        <h3><b>Programming Languages&colon;</b></h3>
+        <ul class="multiList">
+          <li>Java, C, C++, C#, SQL, Python, HTML5/CSS, XML, JavaScript, JQuery</li>
+        </ul> 
+        <h3><b>Software Applications&colon;</b></h3>
+        <ul class="multiList">
+          <li>Eclipse, IBM Rational Application Developer, Git, SQL Developer, MySQL, MySQL Workbench, Android, NetBeans, Servlets, JSP , Spring, OpenShift</li>
+        </ul>
+        <h3><b>Operating Systems&colon;</b></h3>
+        <ul>
+          <li>Windows 7 /10, Mac OSX, Linux &lpar;Ubuntu desktop/server&rpar;</li>
+        </ul>
+        <h2>INTERNSHIPS</h2>
+        <h3><b>Fidelity Investments</b>, Raleigh, NC<span>Summer 2016</span></h3>
+        <p class="subDesc"><b><i>Technical Intern</i></b></p>
+        <ul>
+          <li>Pulled information from instantiated Java objects to generate XML output, updated existing XML style sheets, and used stored procedure calls to push information to database</li>
+          <li>Wired together EJBs in Spring XML config files</li>
+          <li>Updated documentation for previous software applications, mapped UI elements from code and used SQL Developer to trace elements to their source in the QA database</li>
+          <li>Used ClearCase to manage views and share code with other developers</li>
+          <li>Communicated with developers and analysts on multiple teams to meet project requirements</li>
+        </ul>
+        <h3><b>Roku</b>, Austin, TX<span>Summer 2015</span></h3>
+        <p class="subDesc"><b><i>Software Engineer Intern</i></b></p>
+        <ul>
+          <li>Collaborated with senior software developers in day-to-day development efforts</li>
+          <li>Wrote unit tests for platform software and new features and integrated with automated test framework</li>
+          <li>Developed tools using C/C++ and Python to generate test streams such as video pattern and soft audio</li>
+        </ul>
+        <h2>WORK EXPERIENCE</h2>
+        <h3><b>Elon University Campus Technology Support</b>, Elon, NC<span>Spring 2014&dash;Present</span></h3>
+        <p class="subDesc"><b><i>Help Desk Support&sol;Computer Technician</i></b></p>
+        <ul>
+          <li>Initiate log for charting computer usage, including instituting "problems and resolution" database which assisted lab in analyzing student needs</li>
+          <li>Tutor students in operating systems and software applications to enhance understanding of computer usage</li>
+          <li>Provide emergency technical support for early-morning shift</li>
+          <li>Install 15 new PC and Mac computers for lab</li>
+        </ul>
+        <h2>LEADERSHIP AND CAMPUS INVOLVEMENT</h2>
+        <h3><b>Association for Computing Machinery</b>, Elon University<span>Fall 2015&dash;Spring 2016</span></h3>
+        <p class="subDesc"><b><i>Treasurer</i></b></p>
+        <ul>
+          <li>Tracked and balanced association expenditures and $500 budget</li>
+          <li>Handled all financial transaction for organization; collected membership fees</li>
+        </ul>
+        <h3><b>Men's Ultimate Frisbee</b>, Elon University<span>Fall 2014&dash;Spring 2016</span></h3>
+        <p class="subDesc"><b><i>Co-Captain</i></b></p>
+        <ul>
+          <li><p><b><i>Treasurer</i></b></p></li>
+        </ul>
+      </main>
     </body>
 </html>
