--- a/web/webber.html
+++ b/web/webber.html
@@ -5,7 +5,7 @@
 -->
 <html>
     <head>
-        <link rel="stylesheet" href="styles/main.css">
+        <link rel="stylesheet" href="styles/webber.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Reactive Resume</title>
