finalized Greenwell Resume

--- a/web/greenwell.html
+++ b/web/greenwell.html
@@ -95,7 +95,7 @@
         <p class="date">Fall 2009&dash;Fall 2013</p>
         <p class="subDesc"><b><i>Captain</i></b></p>
         <ul>
-          <li>Lead team through a tough season and made sure everyone stayed in line</li>
+          <li>Lead team throughout season, on and off the field</li>
         </ul>
         </div>
       </main>
