fixed html warning

--- a/web/greenwell.html
+++ b/web/greenwell.html
@@ -3,7 +3,7 @@
     Elon University
     September 12th, 2016
 -->
-<html>
+<html lang="en">
     <head>
         <link rel="stylesheet" href="styles/greenwell.css">
         <meta charset="UTF-8">
