--- a/web/webber.html
+++ b/web/webber.html
@@ -3,73 +3,68 @@
     Elon University
     September 12th, 2016
 -->
-<html lang="en">
+ <html lang="en">
     <head>
-        <link rel="stylesheet" href="styles/webber.css">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Reactive Resume</title>
+      <link rel="stylesheet" href="styles/webber.css">
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Reactive Resume</title>
     </head>
     <body>
       <header>
-        <h1>Sarah Smith</h1>
-        <p>Campus Box 1111 &#9679; Elon, NC 27244 &#9679; &lpar;336&rpar; 555&dash;5555 &#9679; ssmith25&#64;elon.edu</p>
+        <h1>Sean Webber</h1>
+        <p>Campus Box 4245 &#9679; Elon, NC 27244 &#9679; &lpar;301&rpar; 892&dash;0177 &#9679; swebber2&#64;elon.edu</p>
       </header>
       <main>
         <h2>EDUCATION</h2>
-        <h3><b>Elon University</b>, Elon, NC<span>May 2017</span></h3>
-        <p><i>Bachelor of Science in Computer Science</i><br>GPA&colon; 3.66, 4 years on Dean’s List</p>
+        <h3><b>Elon University</b>, Elon, NC<span> May 2018</span></h3>
+        <p><i>Bachelor of Science in Computer Science, Bachelor of Arts in Economics</i><br>GPA&colon; 3.79, </p>
         <h2>TECHNICAL QUALIFICATIONS</h2>
         <h3><b>Programming Languages&colon;</b></h3>
         <ul class="multiList">
-          <li>Java, C, C++, C#, SQL, Python, HTML5/CSS, XML, JavaScript, JQuery</li>
+          <li>Java, SQL, Python, HTML5/CSS, SAS, Stata </li>
         </ul> 
         <h3><b>Software Applications&colon;</b></h3>
         <ul class="multiList">
-          <li>Eclipse, IBM Rational Application Developer, Git, SQL Developer, MySQL, MySQL Workbench, Android, NetBeans, Servlets, JSP , Spring, OpenShift</li>
+          <li>Eclipse, Git, XCode, Reflection X, NetBeans, Teradata</li>
         </ul>
         <h3><b>Operating Systems&colon;</b></h3>
         <ul>
           <li>Windows 7 /10, Mac OSX, Linux &lpar;Ubuntu desktop/server&rpar;</li>
         </ul>
         <h2>INTERNSHIPS</h2>
-        <h3><b>Fidelity Investments</b>, Raleigh, NC<span>Summer 2016</span></h3>
-        <p class="subDesc"><b><i>Technical Intern</i></b></p>
+        <h3><b>Elon University</b>, Elon, NC<span> Fall 2016&dash; Present</span></h3>
+        <p class="subDesc"><b><i>Executive Intern</i></b></p>
         <ul>
-          <li>Pulled information from instantiated Java objects to generate XML output, updated existing XML style sheets, and used stored procedure calls to push information to database</li>
-          <li>Wired together EJBs in Spring XML config files</li>
-          <li>Updated documentation for previous software applications, mapped UI elements from code and used SQL Developer to trace elements to their source in the QA database</li>
-          <li>Used ClearCase to manage views and share code with other developers</li>
-          <li>Communicated with developers and analysts on multiple teams to meet project requirements</li>
+          <li>Meet and work alongside Senior Staff members of Elon University</li>
+          <li>Participate in professional development events geared toward highly motivated students</li>
         </ul>
-        <h3><b>Roku</b>, Austin, TX<span>Summer 2015</span></h3>
-        <p class="subDesc"><b><i>Software Engineer Intern</i></b></p>
+        <h3><b>JPMorgan Chase</b>, Wilmington, DE<span> Summer 2016</span></h3>
+        <p class="subDesc"><b><i>CLDP Summer analyst</i></b></p>
         <ul>
-          <li>Collaborated with senior software developers in day-to-day development efforts</li>
-          <li>Wrote unit tests for platform software and new features and integrated with automated test framework</li>
-          <li>Developed tools using C/C++ and Python to generate test streams such as video pattern and soft audio</li>
+          <li>Developed SAS and SQL abilities through completing over 10 data requests within the company</li>
+          <li>Designed plan to improve the process of reporting within Lending Operations in the company </li>
         </ul>
         <h2>WORK EXPERIENCE</h2>
-        <h3><b>Elon University Campus Technology Support</b>, Elon, NC<span>Spring 2014&dash;Present</span></h3>
-        <p class="subDesc"><b><i>Help Desk Support&sol;Computer Technician</i></b></p>
+        <h3><b>Elon Tutoring Center</b>, Elon, NC<span> Fall 2015&dash;Present</span></h3>
+        <p class="subDesc"><b><i>Quantitative Student Tutor</i></b></p>
         <ul>
-          <li>Initiate log for charting computer usage, including instituting "problems and resolution" database which assisted lab in analyzing student needs</li>
-          <li>Tutor students in operating systems and software applications to enhance understanding of computer usage</li>
-          <li>Provide emergency technical support for early-morning shift</li>
-          <li>Install 15 new PC and Mac computers for lab</li>
+          <li>Assist students in Statistics and Math courses</li>
+          <li>Help students learn the basics of SAS programming</li>
+          <li>Communicate progress of students with their professorhift</li>
         </ul>
         <h2>LEADERSHIP AND CAMPUS INVOLVEMENT</h2>
-        <h3><b>Association for Computing Machinery</b>, Elon University<span>Fall 2015&dash;Spring 2016</span></h3>
+        <h3><b>Alpha Phi Alpha Fraternity Inc.</b>, Elon University<span> Spring 2016&dash;Present</span></h3>
         <p class="subDesc"><b><i>Treasurer</i></b></p>
         <ul>
-          <li>Tracked and balanced association expenditures and $500 budget</li>
+          <li>Tracked and balanced association expenditures and $1500 budget</li>
           <li>Handled all financial transaction for organization; collected membership fees</li>
         </ul>
-        <h3><b>Men's Ultimate Frisbee</b>, Elon University<span>Fall 2014&dash;Spring 2016</span></h3>
-        <p class="subDesc"><b><i>Co-Captain</i></b></p>
+        <h3><b>Men's Club Golf</b>, Elon University<span> Fall 2014&dash;Spring 2016</span></h3>
+        <p class="subDesc"><b><i>Member</i></b></p>
         <ul>
-          <li><p><b><i>Treasurer</i></b></p></li>
+          <li><p>Attended meetings and practices </p></li>
         </ul>
       </main>
     </body>
-</html>
+ </html>
