Completed Resume Webber

--- a/web/webber.html
+++ b/web/webber.html
@@ -13,12 +13,16 @@
     <body>
       <header>
         <h1>Sean Webber</h1>
-        <p>Campus Box 4245 &#9679; Elon, NC 27244 &#9679; &lpar;301&rpar; 892&dash;0177 &#9679; swebber2&#64;elon.edu</p>
+        <p>Campus Box 4245 &#9679; Elon, NC 27244 <span id ="reactiveHead"> &#9679; </span> &lpar;301&rpar;&nbsp;892&dash;0177 &#9679; swebber2&#64;elon.edu</p>
       </header>
       <main>
         <h2>EDUCATION</h2>
-        <h3><b>Elon University</b>, Elon, NC<span> May 2018</span></h3>
-        <p><i>Bachelor of Science in Computer Science, Bachelor of Arts in Economics</i><br>GPA&colon; 3.79, </p>
+        <div class ="contentBlock">
+        <h3><b>Elon University</b>, Elon, NC</h3>
+        <p class ="date">May 2018 </p>
+        <p><i>Bachelor of Science in Computer Science, Bachelor of Arts in Economics</i></p>
+        <p>GPA&colon; 3.79</p>
+        </div>
         <h2>TECHNICAL QUALIFICATIONS</h2>
         <h3><b>Programming Languages&colon;</b></h3>
         <ul class="multiList">
@@ -33,38 +37,53 @@
           <li>Windows 7 /10, Mac OSX, Linux &lpar;Ubuntu desktop/server&rpar;</li>
         </ul>
         <h2>INTERNSHIPS</h2>
-        <h3><b>Elon University</b>, Elon, NC<span> Fall 2016&dash; Present</span></h3>
+        <div class ="contentBlock">
+          <h3><b>Elon University</b>, Elon, NC</h3>
+          <p class="date">Fall 2016&dash; Present</p>
         <p class="subDesc"><b><i>Executive Intern</i></b></p>
         <ul>
           <li>Meet and work alongside Senior Staff members of Elon University</li>
           <li>Participate in professional development events geared toward highly motivated students</li>
         </ul>
-        <h3><b>JPMorgan Chase</b>, Wilmington, DE<span> Summer 2016</span></h3>
+        </div>
+        <div class="contentBlock">
+          <h3><b>JPMorgan Chase</b>, Wilmington, DE</h3>
+          <p class="date">Summer 2016</p> 
         <p class="subDesc"><b><i>CLDP Summer analyst</i></b></p>
         <ul>
           <li>Developed SAS and SQL abilities through completing over 10 data requests within the company</li>
           <li>Designed plan to improve the process of reporting within Lending Operations in the company </li>
         </ul>
+        </div>
         <h2>WORK EXPERIENCE</h2>
-        <h3><b>Elon Tutoring Center</b>, Elon, NC<span> Fall 2015&dash;Present</span></h3>
+        <div class="contentBlock">
+             <h3><b>Elon Tutoring Center</b>, Elon, NC </h3>
+          <p class="date">Fall 2016&dash;Present</p> 
         <p class="subDesc"><b><i>Quantitative Student Tutor</i></b></p>
         <ul>
           <li>Assist students in Statistics and Math courses</li>
           <li>Help students learn the basics of SAS programming</li>
-          <li>Communicate progress of students with their professorhift</li>
+          <li>Communicate progress of students with their professor</li>
         </ul>
+        </div>
         <h2>LEADERSHIP AND CAMPUS INVOLVEMENT</h2>
-        <h3><b>Alpha Phi Alpha Fraternity Inc.</b>, Elon University<span> Spring 2016&dash;Present</span></h3>
+        <div class="contentBlock">
+          <h3><b>Alpha Phi Alpha Fraternity Inc.</b>, Elon University</h3>
+          <p class="date">Spring 2016&dash;Present</p>
         <p class="subDesc"><b><i>Treasurer</i></b></p>
         <ul>
           <li>Tracked and balanced association expenditures and $1500 budget</li>
           <li>Handled all financial transaction for organization; collected membership fees</li>
         </ul>
-        <h3><b>Men's Club Golf</b>, Elon University<span> Fall 2014&dash;Spring 2016</span></h3>
+        </div>
+        <div class="contentBlock">
+          <h3><b>Men's Club Golf</b>, Elon University</h3>
+          <p class="date">Fall 2014&dash;Spring 2016</p>
         <p class="subDesc"><b><i>Member</i></b></p>
         <ul>
           <li><p>Attended meetings and practices </p></li>
         </ul>
+        </div>
       </main>
     </body>
  </html>
